# Bee

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Assets.asset  CMakeLists.txt  README.md  bb  bb.cmd
Source/Bee/: Bee.cpp  Bee.hpp  CMakeLists.txt  TestMain.cpp
Source/Bee/Application/: AppLoop.cpp  AppLoop.hpp  Application.cpp  Application.hpp  CMakeLists.txt  Input.cpp  Input.hpp  Main.hpp  Platform.cpp  Platform.hpp
Source/Bee/Application/Win32/: CMakeLists.txt  Win32Input.cpp  Win32Platform.cpp
Source/Bee/AssetCache/: AssetCache.cpp  AssetCache.hpp  CMakeLists.txt
Source/Bee/AssetDatabase/: AssetDatabase.cpp  AssetDatabase.hpp  AssetDatabase.inl  CMakeLists.txt
Source/Bee/AssetPipeline/: AssetCompiler.cpp  AssetCompiler.hpp  AssetDatabase.cpp  AssetDatabase.hpp  AssetDatabase.inl  AssetImportPipeline.cpp  AssetImportPipeline.hpp  AssetImportPipeline.inl  AssetLoadPipeline.cpp  AssetMeta.cpp  AssetMeta.hpp  AssetPipeline.cpp  AssetPipeline.hpp  AssetPipeline.inl  AssetPlatform.hpp  CMakeLists.txt
Source/Bee/AssetPipelineV2/: AssetDatabase.cpp  AssetDatabase.inl  AssetLoadPipeline.cpp  AssetPipeline.plugin
Source/Bee/Core/: Atomic.hpp  AtomicCounter.hpp  Base64.cpp  Base64.hpp  Bit.hpp  Bitset.hpp  CLI.cpp  CLI.hpp  CMakeLists.txt  Concurrency.cpp  Concurrency.hpp  Config.hpp  Debug.cpp  Debug.hpp  DynamicLibrary.hpp  Enum.hpp  EnumStruct.hpp  Error.cpp  Error.hpp  Filesystem.cpp  Filesystem.hpp  Forward.hpp  Functional.hpp  GUID.cpp  GUID.hpp  Handle.hpp  Hash.cpp  Hash.hpp  IO.cpp  IO.hpp  IO.inl  Logger.cpp  Logger.hpp  Main.hpp  Meta.hpp  Move.hpp  New.hpp  Noncopyable.hpp  NumericTypes.hpp  Path.cpp  (+24 more)
Source/Bee/Core/Containers/: Array.hpp  CMakeLists.txt  Container.hpp  HandleTable.hpp  HandleTable.inl  HashMap.hpp  ResourcePool.hpp  RingBuffer.cpp  RingBuffer.hpp  SoA.hpp  SoA.inl  StaticArray.hpp
Source/Bee/Core/JSON/: CMakeLists.txt  JSON.cpp  JSON.hpp  RapidJSON.hpp  Reader.cpp  Reader.hpp  Value.cpp  Value.hpp  Value.inl
Source/Bee/Core/Jobs/: CMakeLists.txt  JobDependencyCache.cpp  JobDependencyCache.hpp  JobSystem.cpp  JobSystem.hpp  JobTypes.cpp  JobTypes.hpp  WorkStealingQueue.cpp  WorkStealingQueue.hpp
Source/Bee/Core/Math/: AABB.hpp  CMakeLists.txt  Math.cpp  Math.hpp  float2.hpp  float3.hpp  float4.hpp  float4x4.hpp  half.cpp  half.hpp  matrix.cpp  quaternion.hpp  vec.hpp
Source/Bee/Core/Memory/: Allocator.hpp  CMakeLists.txt  ChunkAllocator.cpp  ChunkAllocator.hpp  GlobalMemory.cpp  LinearAllocator.cpp  LinearAllocator.hpp  MallocAllocator.cpp  MallocAllocator.hpp  Memory.hpp  MemoryTracker.cpp  MemoryTracker.hpp  PoolAllocator.cpp  PoolAllocator.hpp  SmartPointers.hpp  StackAllocator.hpp  ThreadSafeLinearAllocator.cpp  ThreadSafeLinearAllocator.hpp  VMAllocator.hpp  VariableSizedPoolAllocator.cpp  VariableSizedPoolAllocator.hpp
Source/Bee/Core/Serialization/: BinarySerializer.cpp  BinarySerializer.hpp  CMakeLists.txt  JSONSerializer.cpp  JSONSerializer.hpp  MemorySerializer.cpp  MemorySerializer.hpp  Serialization.cpp  Serialization.hpp  StreamSerializer.cpp  StreamSerializer.hpp
Source/Bee/Core/Tests/: AllocatorTests.cpp  ArrayTests.cpp  CMakeLists.txt  FilesystemTests.cpp  FunctionalTests.cpp  GUIDTests.cpp  HandleTableTests.cpp  HashMapTests.cpp  (+13 more)
Source/Bee/DataConnection/: CMakeLists.txt  DataConnection.cpp  DataConnection.hpp  DataConnection.plugin
Source/Bee/Editor/: App.cpp  App.hpp  CMakeLists.txt  Editor.plugin  EditorApp.cpp  EditorApp.hpp  EditorWindow.cpp  EditorWindow.inl  Main.cpp  bee.boot
Source/Bee/Engine/: CMakeLists.txt  Engine.hpp
Source/Bee/Entity/: CMakeLists.txt  Component.cpp  Entity.cpp  Entity.inl
Source/Bee/Gpu/: CMakeLists.txt  Gpu.cpp  Gpu.hpp  Gpu.plugin  GpuHandle.hpp  ResourceTable.hpp
Source/Bee/Graphics/: CMakeLists.txt  GPU.hpp  GPULimits.hpp  Material.hpp  Mesh.hpp  RenderGraph.cpp  RenderGraph.hpp  Shader.cpp  Shader.hpp
Source/Bee/ImGui/: Api.cpp  Api.hpp  CMakeLists.txt  Extensions.inl  ImConfig.hpp  ImGui.cpp  ImGui.hpp  ImGui.plugin  Target.cpp
Source/Bee/Input/: CMakeLists.txt  Input.cpp  Input.hpp  Input.plugin  Keyboard.hpp  Mouse.hpp
Source/Bee/Platform/: CMakeLists.txt  Platform.hpp  Platform.plugin
Source/Bee/Plugins/: CMakeLists.txt
Source/Bee/Project/: CMakeLists.txt  Project.cpp  Project.hpp  Project.inl  Project.plugin
Source/Bee/RenderGraph/: CMakeLists.txt  RenderGraph.cpp  RenderGraph.hpp  RenderGraph.plugin
Source/Bee/ShaderPipeline/: CMakeLists.txt  Cache.cpp  Cache.hpp  Compiler.cpp  Compiler.hpp  Resource.inl  ShaderPipeline.cpp  ShaderPipeline.hpp  ShaderPipeline.plugin
Source/Bee/Vulkan/: CMakeLists.txt  VulkanBackend.hpp  VulkanCommand.cpp  VulkanConvert.cpp  VulkanConvert.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanObjectCache.cpp  VulkanObjectCache.hpp  VulkanStaging.cpp  VulkanWsi.cpp
Source/Bee/VulkanBackend/: CMakeLists.txt  VulkanBackend.plugin  VulkanCommand.cpp  VulkanConvert.cpp  VulkanConvert.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanObjectCache.cpp  VulkanObjectCache.hpp  VulkanStaging.cpp  VulkanWsi.cpp
Source/Runtime/: CMakeLists.txt
Source/Runtime/Bee/: CMakeLists.txt  TestMain.cpp
Source/Runtime/Tests/: CMakeLists.txt  EntityTests.cpp  TestComponents.hpp
Tools/: .gitignore  CMakeLists.txt  package.bat  prepare.bat
Tools/AssetCompiler/: CMakeLists.txt  Main.cpp
Tools/BeeBuild/: CMakeLists.txt  Environment.cpp  Environment.hpp  Main.cpp
Tools/BeeReflect/: ASTMatcher.cpp  ASTMatcher.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Codegen.cpp  Codegen2.cpp  FileTemplates.cpp  FileTemplates.hpp  Frontend.cpp  Frontend.hpp  Main.cpp  RecordFinder.cpp  RecordFinder.hpp  ReflectionAllocator.hpp  Storage.cpp  Storage.hpp
Tools/BeeReflect/Tests/: BasicStruct.hpp  CMakeLists.txt  Main.cpp  OtherHeader.hpp
Tools/BeeReflect2/: ASTMatcher.cpp  ASTMatcher.hpp  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  Frontend.cpp  Frontend.hpp  Main.cpp  Storage.cpp  Storage.hpp
Tools/BeeShaderCompiler/: CLI.cpp  CMakeLists.txt  ServerMain.cpp
Tools/ImGuiGenerator/: CMakeLists.txt  Generator.inl  Main.cpp  generator.bat
(+491 files in other folders)
